# shoreline_sim

./: CMakeLists.txt  README.md  package.xml  setup.sh
launch/: moos_wamv_beach_launch.py  wamv_beach_launch.py
models/sharc/: model.config  sharc.sdf
models/wamv/: wamv.sdf
models/waves/: model.sdf
plugins/: CMakeLists.txt
src/: CMakeLists.txt
src/systems/hydrodynamics/: Hydrodynamics.hh
src/systems/waves/: RenderEngineExtensionManager.cc
worlds/: beach_world.sdf
